Placeholders for key sections

--- a/pages/learn/index.html
+++ b/pages/learn/index.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Community | Knownly{% endblock %}
+{% block title %}Learn | Knownly{% endblock %}
 
 {% block content %}
 <div class="container content">
   <div class="container">
-    <h1>Community</h1>
+    <h1>Learn</h1>
     <div class="row">
-	    <div class="col-md-12">
-	    Welcome.
-	    </div>
+      <div class="col-md-12">
+      Coming soon.
+      </div>
     </div>
   </div>
 </div>
