Basic homepage with intro links to four major sections: gallery, guides, discussion, support

--- a/pages/guides/index.html
+++ b/pages/guides/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Learn | Knownly{% endblock %}
+{% block title %}Guides | Knownly{% endblock %}
 
 {% block content %}
 <div class="container content">
   <div class="container">
-    <h1>Learn</h1>
+    <h1>Guides</h1>
     <div class="row">
       <div class="col-md-12">
       Coming soon.
