Page specific meta and open graph tags

--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Gallery | Knownly{% endblock %}
+{% block title %}Gallery | Knownly Community{% endblock %}
+{% block description %}Knownly Community gallery{% endblock %}
+{% block og_title %}Knownly Gallery{% endblock %}
+{% block og_description %}Knownly Community gallery{% endblock %}
 
 {% block content %}
 <div class="container content">
