--- a/pages/guides/index.html
+++ b/pages/guides/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Guides | Knownly{% endblock %}
+{% block title %}Guides | Knownly Community{% endblock %}
+{% block description %}Knownly Community guides{% endblock %}
+{% block og_title %}Knownly Guides{% endblock %}
+{% block og_description %}Knownly Community guides{% endblock %}
 
 {% block css_head %}
   {{ block.super}}
