--- a/pages/guides/index.html
+++ b/pages/guides/index.html
@@ -16,9 +16,9 @@
             <h1>Knownly Guides</h1>
             <div class="row">
                 {% for guide in guides %}
-                    <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="col-xs-12 col-sm-6 col-md-3 guide-thumbnails">
                         <div class="thumbnail">
-                            <img src="{% static guide.img_src %}" alt="...">
+                            <img src="{% static guide.img_src %}">
                             <div class="caption">
                                 <h3><a href="{{ guide.path }}">{{ guide.title }} <br /><small>{{ guide.author }}</small></a></h3>
                                 <p>{{ guide.headline }}</p>
