Added CC / MIT license statement; tidied up layouts

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,64 +5,54 @@
   <div class="col-md-12 text-center">
     <h1>Community</h1>
     <p class="lead">Get started, learn and teach, grow together.</p>
-    <div class="row">
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <i class="fa fa-5x fa-picture-o"></i>
-	      <div class="caption">
-	        <h3>Gallery</h3>
-	        <p>See what's possible and get inspired by great websites hosted at Knownly.</p>
-			<hr/>
-	        <a id="thumbnail-link-btn-gallery" href="{% url '/gallery/' %}" class="btn btn-primary" role="button">Browse the gallery</a>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <i class="fa fa-5x fa-file-text"></i>
-	      <div class="caption">
-	        <h3>Guides</h3>
-	        <p>Explainers and step-by-step walkthroughs for everybody from beginners to pro.</p>
-	        <hr/>
-	        <a id="thumbnail-link-btn-guides" href="{% url '/guides/' %}" class="btn btn-primary" role="button">Check the guides</a>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	<div class="row">
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <i class="fa fa-5x fa-comments"></i>
-	      <div class="caption">
-	        <h3>Discussion</h3>
-	        <hr/>
-	        <p>Engage the community for advice, tips and tricks.</p>
-	        <a id="thumbnail-link-btn-discuss" href="https://www.facebook.com/groups/knownly/?ref=knownly-community-homepage" target="_blank" class="btn btn-primary" role="button">Join the discussion</a>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <i class="fa fa-5x fa-support"></i>
-	      <div class="caption">
-	        <h3>Support</h3>
-	        <p>Reach out for one-on-one assistance.</p>
-	        <hr/>
-	        <a id="thumbnail-link-btn-support" href="mailto:info@knownly.net?subject=Support%20request" target="_blank" class="btn btn-primary" role="button">Ask for support</a>
-	      </div>
-	    </div>
-	  </div>
-	</div>
+    <div class="col-sm-12 col-md-4">
+      <div class="thumbnail">
+        <i class="fa fa-5x fa-file-text"></i>
+        <div class="caption">
+          <h3>Guides</h3>
+          <div class="caption-body">
+            <p>Explainers and step-by-step walkthroughs for everybody from beginners to pro.</p>
+          </div>
+          <hr/>
+          <a id="thumbnail-link-btn-guides" href="{% url '/guides/' %}" class="btn btn-primary" role="button">Check the guides</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-4">
+      <div class="thumbnail">
+        <i class="fa fa-5x fa-comments"></i>
+        <div class="caption">
+          <h3>Discussion</h3>
+          <div class="caption-body">
+            <p>Engage the community for advice, tips and tricks.</p>
+          </div>
+          <hr/>
+          <a id="thumbnail-link-btn-discuss" href="https://www.facebook.com/groups/knownly/?ref=knownly-community-homepage" target="_blank" class="btn btn-primary" role="button">Join the discussion</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-4">
+      <div class="thumbnail">
+        <i class="fa fa-5x fa-support"></i>
+        <div class="caption">
+          <h3>Support</h3>
+          <div class="caption-body">
+            <p>Reach out for one-on-one assistance.</p>
+          </div>
+          <hr/>
+          <a id="thumbnail-link-btn-support" href="mailto:info@knownly.net?subject=Support%20request" target="_blank" class="btn btn-primary" role="button">Ask for support</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
 
 {% block js_footer %}
-	{{ block.super }}
-	<script>
-    mixpanel.track_links("#thumbnail-link-btn-gallery", "Gallery link clicked (Community:Landing Page)");
+  {{ block.super }}
+  <script>
     mixpanel.track_links("#thumbnail-link-btn-guides", "Guides link clicked (Community:Landing Page)");
-    mixpanel.track_links("thumbnail-link-btn-discuss", "Discuss link clicked (Community:Landing Page)");
+    mixpanel.track_links("#thumbnail-link-btn-discuss", "Discuss link clicked (Community:Landing Page)");
     mixpanel.track_links("#thumbnail-link-btn-support", "Support link clicked (Community:Landing Page)");
   </script>
 {% endblock %}
