--- a/pages/guides/index.html
+++ b/pages/guides/index.html
@@ -5,23 +5,29 @@
 {% block og_title %}Knownly Guides{% endblock %}
 {% block og_description %}Knownly Community guides{% endblock %}
 
+{% block css_head %}
+  {{ block.super }}
+  <link href="themes/prism.css" rel="stylesheet" />
+{% endblock %}
+
+{% block js_footer %}
+  {{ block.super }}
+  <script src="prism.js"></script>
+{% endblock %}
+
 {% block content %}
-    <div id="guides" class="container content">
-        <div class="div col-md-12">
-            <h1>Knownly Guides</h1>
-            <div class="row">
-                {% for guide in guides %}
-                    <div class="col-xs-12 col-sm-6 col-md-3 guide-thumbnails">
-                        <div class="thumbnail">
-                            <img src="{% static guide.img_src %}">
-                            <div class="caption">
-                                <h3><a href="{{ guide.path }}">{{ guide.title }} <br /><small>{{ guide.author }}</small></a></h3>
-                                <p>{{ guide.headline }}</p>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+<h1>Knownly Guides</h1>
+<div class="row">
+  {% for guide in guides %}
+    <div class="col-xs-12 col-sm-6 col-md-3 guide-thumbnails">
+      <div class="thumbnail">
+        <img src="{% static guide.img_src %}">
+        <div class="caption">
+          <h3><a href="{{ guide.path }}">{{ guide.title }} <br /><small>{{ guide.author }}</small></a></h3>
+          <p>{{ guide.headline }}</p>
         </div>
+      </div>
     </div>
+  {% endfor %}
+</div>
 {% endblock content %}
