Fixed typo in Twitter Timelines guide

--- a/pages/guides/twitter-timelines/index.html
+++ b/pages/guides/twitter-timelines/index.html
@@ -92,7 +92,7 @@ That said, we can at least use the wrapper _div_ we created earlier to get the t
 }
 ```
 
-## Wraping up
+## Wrapping up
 
 As you've now seen it's quite straight forward to embed a neat little Twitter Timeline into your very own webpage. It's even possible to include multiple timelines so you include your own tweets along with a topic focussed list or hashtag search.
 
