Adjusted 'now' page guide based on reviewer feedback

--- a/pages/guides/nownownow/index.html
+++ b/pages/guides/nownownow/index.html
@@ -1,7 +1,7 @@
 title: Making a NowNowNow page
 author: Dwight Gunning
 date: 25-01-2016
-headline: Share the things that you're now focused on right now
+headline: Share the things that you're focused on right now
 img_src: guides/nownownow/img/nownownow.jpg
 img_attr: <a href="https://www.nownownow.com">nownownow.com</a></em>
 
@@ -18,13 +18,13 @@ _Now pages_ are a neat initiative started by [Greg Albritton](http://gregalbritt
 
 For more of back-story and aims of the project, feel free to jump over to [nownownow.com](http://www.nownownow.com).
 
-This guide is written for folks who've never created a webpage from scratch but are keen to do so. It's 7 quick steps and take roughly 15 minutes.
+This guide is written for folks who've never created a webpage from scratch but are keen to do so. It's just six simple steps that will take roughly 15 minutes.
 
-_If you're already up with Dropbox and Knownly you can skip to [Step 4](#now-page-template) and grab our 'now' page template._
+_If you're already up and running with Knownly, feel free to skip to [Step 4](#now-page-template) and grab our 'now' page template._
 
 ## 1. Sign up and install Dropbox
 
-First up you'll need to sign up for a Dropbox account and install the app so that all your website files will be automatically sent to "the cloud". With your website files in "the cloud", Knownly can make them accessible as a website.
+First up you'll need to sign up for a Dropbox account and install the app. This will allow you to work on your website on your laptop and the Dropbox app will take care of sending your files to Dropbox in the cloud. With your website files in Dropbox, Knownly can make them accessible as a website.
 
 Just head over to [Dropbox](https://www.dropbox.com) to register.
 
@@ -32,23 +32,23 @@ After you have your Dropbox account, you'll want to install the Dropbox app on y
 
 ## 2. Register with Knownly
 
-Knownly registration is simple:  All you'll be asked is to grant the Knownly service permission to setup a new area within your Dropbox where we can create a website folder that will hold your _now_ page. Then select your Knownly plan and you're up and running.
+Knownly registration is simple:  All you'll be asked to do is to grant the Knownly service permission to setup a new area within your Dropbox. This is where you can create a website folder that will hold your _now_ page. Once you've authorized Dropbox, the final step is to select your Knownly plan. Now you're up and running!
 
 Go <a href="https://www.knownly.net/signup" target="_blank">do it</a>.
 
 ## 3. Create a Knownly Website
 
-After you've got your Knownly account, it's time to create your website.
+After you've got your Knownly account, you'll be shown the Knownly Console where you can manage your websites. It's time to create your website.
 
 That's just a matter of deciding what domain you'd like to use, and the submitting it via the form in the Knownly console:
 
 ![Create website form]({% static '/guides/nownownow/img/create_knownly_website.png' %} "Knownly Console")
 
-Shortly after receiving confirmation in the Knownly console that you're website has been created, a new folder for your website will be created within your Dropbox folder on your machine. Inside you'll see a placeholder file called "index.html".
+Shortly after receiving confirmation in the Knownly console that your website has been created, a new folder for your website will be created within your Dropbox folder on your machine. Inside you'll see a placeholder file called "index.html".
 
 ![Dropbox Recent Changes shows 'index.html']({% static '/guides/nownownow/img/dropbox_recent_changes.png' %} "Dropbox Recent Changes")
 
-You can type your chose website domain into your web browser and this HTML page will be displayed. Congratulations on getting the first page of your website online!
+You can type your chosen website domain into your web browser and this HTML page will be displayed. Congratulations on getting the first page of your website online!
 
 ## <a name="now-page-template"></a>4. Add the 'now' page template
 
@@ -64,7 +64,7 @@ Now on to creating your now page:
 
 1. Create a sub-folder named 'now' within your Knownly website folder. It should sit along side the placeholder 'index.html' that was automatically generated for the website.
 2. Inside the 'now' folder, create a new file called index.html
-3. Add the HTML template so you can quickly test out your 'now' page:
+3. Add the HTML template (shown just below) so you can quickly test out your 'now' page
 4. Check that you can view your new 'now' page in your browser at: _http://mysite.knownly.net/now/_
 
 ```html
@@ -90,7 +90,7 @@ Now on to creating your now page:
 </html>
 ```
 
-Styling your 'now' page with CSS is the logical next step. That's a topic worthy of a separate guide (, several guides in fact). Right now, the best place to learn CSS is Codecademy's [HTML & CSS course](https://www.codecademy.com/en/tracks/htmlcss). Be sure to check it out some time.
+Styling your 'now' page with CSS is the logical next step. That's a topic worthy of a separate guide (several guides in fact). Right now, the best place to learn CSS is Codecademy's [HTML & CSS course](https://www.codecademy.com/en/tracks/htmlcss). Be sure to check it out some time.
 
 ## 5. Fill in what you're up to right now
 
@@ -98,7 +98,7 @@ This part is really up to you ;)
 
 ## 6. Submit your 'now' page to the listing
 
-To get a listing, all you need to do follow [the instructions](http://nownownow.com/about/#hownow), which basically involves emailing Derek.
+To have your 'now' page listed, just follow the [simple instructions](http://nownownow.com/about#hownow):
 
 > If you already have your own website with a /now page on it, as described and defined above, just email the URL to me at <derek@sivers.org>. After you do, I’ll email you back with a link to log in and answer a few questions, which, when done, will create a profile page for you.
 
@@ -106,7 +106,7 @@ Don't forget to spread the word on Facebook, Twitter and emailing!
 
 ## Wrapping up
 
-Now that you're all done, follow [nownownow on Twitter](https://twitter.com/nownownow) and keep an eye out for you profile to appear.
+Now that you're all done, follow [nownownow on Twitter](https://twitter.com/nownownow) and keep an eye out for your profile to appear.
 
 {% endfilter %}
 {% endblock %}
