Revised blog, guide index pages and sitemap to use url template tag

--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -15,7 +15,7 @@
                         <div class="thumbnail">
                             <img src="{% static gallery_site.img_src %}">
                             <div class="caption">
-                                <h3><a href="{{ gallery_site.path }}">{{ gallerysite.title }} <br /><small>{{ gallery_site.author }}</small></a></h3>
+                                <h3><a href="{{ gallery_site.page.final_url }}">{{ gallerysite.title }} <br /><small>{{ gallery_site.author }}</small></a></h3>
                                 <p>{{ gallery_site.headline }}</p>
                             </div>
                         </div>
