--- a/pages/guides/index.html
+++ b/pages/guides/index.html
@@ -11,9 +11,9 @@
   {% for guide in guides %}
     <div class="col-xs-12 col-sm-6 col-md-3 guide-thumbnails">
       <div class="thumbnail">
-        <img src="{% static guide.img_src %}">
+        <a href="{% url guide.page.final_url %}"><img src="{% static guide.img_src %}"></a>
         <div class="caption">
-          <h3><a href="{{ guide.path }}">{{ guide.title }} <br /><small>{{ guide.author }}</small></a></h3>
+          <h3><a href="{% url guide.page.final_url %}">{{ guide.title }} <br /><small>{{ guide.author }}</small></a></h3>
           <p>{{ guide.headline }}</p>
         </div>
       </div>
