--- a/pages/guides/index.html
+++ b/pages/guides/index.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 <h1>Knownly Guides</h1>
-<div class="row">
   {% for guide in guides %}
+    {% if forloop.first %}<div class="row">{% endif %}
     <div class="col-xs-12 col-sm-6 col-md-3 guide-thumbnails">
       <div class="thumbnail">
         <a href="{% url guide.page.final_url %}"><img src="{% static guide.img_src %}"></a>
@@ -18,6 +18,7 @@
         </div>
       </div>
     </div>
+  {% if forloop.counter|divisibleby:4 %}</div><div class="row">{% endif %}
+  {% if forloop.last %}</div>{% endif %}
   {% endfor %}
-</div>
 {% endblock content %}
